--- a/qtcassist/qtcassist-base/src/main/resources/application-dev.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 spring.datasource.name=dev
-spring.datasource.url=jdbc:mysql://10.104.102.225/qtccloud
-spring.datasource.username=root
-spring.datasource.password=admin@123
+spring.datasource.url=jdbc:mysql://10.104.20.123:3306/qtccloud
+spring.datasource.username=developer
+spring.datasource.password=developer1015
 
 eureka.client.service-url.defaultZone=http://localhost:8001/eureka/
 
@@ -15,7 +15,7 @@ spring.redis.pool.max-idle=500
 spring.redis.pool.min-idle=0
 spring.redis.timeout=0
 
-metaq.consumer.start-up=true
+metaq.consumer.start-up=false
 
 #彩色日志
 spring.output.ansi.enabled=ALWAYS
