--- a/qtccloud/qtccloud-zuul/src/main/resources/application-dev.yml
+++ b/qtccloud/qtccloud-zuul/src/main/resources/application-dev.yml
@@ -14,6 +14,9 @@ spring:
       max-file-size: 100Mb
       max-request-size: 100Mb
 
+zuul:
+  ignored-headers: Access-Control-Allow-Credentials, Access-Control-Allow-Origin
+
 ribbon:
   ReadTimeout: 60000
   ConnectTimeout: 60000
