--- a/qtcadmin/qtcadmin-web/pom.xml
+++ b/qtcadmin/qtcadmin-web/pom.xml
@@ -120,6 +120,18 @@
 		</dependency>
 
 		<dependency>
+			<groupId>io.github.openfeign.form</groupId>
+			<artifactId>feign-form</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.github.openfeign.form</groupId>
+			<artifactId>feign-form-spring</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+
+		<dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>RELEASE</version>
