--- a/qtccloud/qtccloud-base/pom.xml
+++ b/qtccloud/qtccloud-base/pom.xml
@@ -63,6 +63,12 @@
             <version>1.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
