--- a/qtccloud/qtccloud-base/src/main/resources/application-dev.yml
+++ b/qtccloud/qtccloud-base/src/main/resources/application-dev.yml
@@ -32,3 +32,8 @@ mybatis:
 ribbon:
   eureka:
     enable: true
+
+file:
+  filePath: e:/file/uploaded_files/
+  pre: /files
+  server: http://127.0.0.1:8003
