--- a/qtccloud/qtccloud-base/src/main/resources/application-test.yml
+++ b/qtccloud/qtccloud-base/src/main/resources/application-test.yml
@@ -32,3 +32,8 @@ mybatis:
 ribbon:
   eureka:
     enable: true
+
+file:
+  filePath: /file/uploaded_files/
+  pre: /files
+  server: http://10.104.108.177:8003
