--- a/qtcassist/qtcassist-base/src/main/resources/application.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application.properties
@@ -7,11 +7,9 @@ management.security.enabled=false
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
+ribbon.eureka.enabled=true
 ribbon.ReadTimeout=60000
 ribbon.ConnectTimeout=30000
-
-eureka.client.registerWithEureka=true
-eureka.client.fetchRegistry=true
 
 # 下面为连接池的补充设置，应用到上面所有数据源中
 # 初始化大小，最小，最大
