--- a/test/src/main/resources/application.properties
+++ b/test/src/main/resources/application.properties
@@ -9,6 +9,10 @@ feign.hystrix.enabled=false
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
+ribbon.eureka.enabled=true
+ribbon.ReadTimeout=60000
+ribbon.ConnectTimeout=30000
+
 # 下面为连接池的补充设置，应用到上面所有数据源中
 # 初始化大小，最小，最大
 spring.datasource.initialSize=5
