--- a/qtchome/qtchome-web/pom.xml
+++ b/qtchome/qtchome-web/pom.xml
@@ -67,11 +67,11 @@
             <artifactId>fastjson</artifactId>
             <version>RELEASE</version>
         </dependency>
-		<!--<dependency>-->
-			<!--<groupId>com.ucar</groupId>-->
-			<!--<artifactId>qtcassist-api</artifactId>-->
-			<!--<version>1.0-SNAPSHOT</version>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>com.ucar</groupId>
+			<artifactId>qtcassist-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
     </dependencies>
 
 	<dependencyManagement>
