--- a/qtccloud/qtccloud-zuul/src/main/resources/application-dev.yml
+++ b/qtccloud/qtccloud-zuul/src/main/resources/application-dev.yml
@@ -26,7 +26,11 @@ zuul:
 
 ribbon:
   ReadTimeout: 60000
-  ConnectTimeout: 60000
+  ConnectTimeout: 30000
+  eureka:
+    enabled: true
+
+
 
 hystrix:
   command:
