--- a/qtchome/qtchome-web/src/main/resources/application.yml
+++ b/qtchome/qtchome-web/src/main/resources/application.yml
@@ -27,5 +27,5 @@ spring:
 ribbon:
    ReadTimeout: 60000
    ConnectTimeout: 30000
-     eureka:
-       enabled: true
+#     eureka:
+#       enabled: true
