--- a/qtccloud/qtccloud-zuul/src/main/resources/application-prod.yml
+++ b/qtccloud/qtccloud-zuul/src/main/resources/application-prod.yml
@@ -5,7 +5,11 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://10.104.108.177:8001/eureka/
+      healthcheck:
+        enabled: true
   instance:
+    lease-renewal-interval-in-seconds: 10
+    lease-expiration-duration-in-seconds: 20
     prefer-ip-address: true
     instance-id: 10.104.108.177:${server.port}
 
@@ -22,10 +26,10 @@ zuul:
   ignored-headers: Access-Control-Allow-Credentials, Access-Control-Allow-Origin
 
 ribbon:
-  ReadTimeout: 10000
-  ConnectTimeout: 10000
-    eureka:
-      enabled: true
+  ReadTimeout: 60000
+  ConnectTimeout: 30000
+  eureka:
+    enabled: true
 
 hystrix:
   command:
@@ -35,4 +39,4 @@ hystrix:
           enabled: true
         isolation:
           thread:
-            timeoutInMilliseconds: 5000
+            timeoutInMilliseconds: 60000
