--- a/qtchome/qtchome-web/src/main/resources/application.yml
+++ b/qtchome/qtchome-web/src/main/resources/application.yml
@@ -1,31 +1,5 @@
-server:
-  port: 8006
+## dev | prod | test
 
-eureka:
-  client:
-    registerWithEureka: true
-    fetchRegistry: true
-    serviceUrl:
-      defaultZone: http://${spring.cloud.client.ipAddress}:8001/eureka/
-      healthcheck:
-        enabled: true
-  instance:
-    lease-renewal-interval-in-seconds: 10
-    lease-expiration-duration-in-seconds: 20
-    prefer-ip-address: true
-    instance-id: ${spring.cloud.client.ipAddress}:${server.port}
-
-security:
-  basic:
-    enabled: false
-
-logging:
-  level: debug
 spring:
-  application:
-    name: api-home
-ribbon:
-   ReadTimeout: 60000
-   ConnectTimeout: 30000
-#     eureka:
-#       enabled: true
+  profiles:
+    active: @environment@
