--- a/qtcassist/qtcassist-api/pom.xml
+++ b/qtcassist/qtcassist-api/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.49</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>1.4.5.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
