--- a/qtccloud/qtccloud-zuul/src/main/resources/application-dev.yml
+++ b/qtccloud/qtccloud-zuul/src/main/resources/application-dev.yml
@@ -4,14 +4,14 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://${spring.cloud.client.ipAddress}:8001/eureka/
+      defaultZone: http://10.103.13.217:8001/eureka/
     healthcheck:
       enabled: true
   instance:
     lease-renewal-interval-in-seconds: 10
     lease-expiration-duration-in-seconds: 20
     prefer-ip-address: true
-    instance-id: ${spring.cloud.client.ipAddress}:${server.port}
+    instance-id: 10.103.13.217:${server.port}
 
 spring:
   application:
@@ -23,13 +23,6 @@ spring:
 
 zuul:
   ignored-headers: Access-Control-Allow-Credentials, Access-Control-Allow-Origin
-#  ignoredServices: "*"
-
-ribbon:
-  ReadTimeout: 60000
-  ConnectTimeout: 30000
-  eureka:
-    enabled: true
 
 hystrix:
   command:
@@ -40,3 +33,9 @@ hystrix:
         isolation:
           thread:
             timeoutInMilliseconds: 60000
+
+ribbon:
+  ReadTimeout: 60000
+  ConnectTimeout: 30000
+  eureka:
+    enabled: true
