--- a/test/src/main/resources/application.properties
+++ b/test/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8763
 spring.application.name=test
 eureka.client.service-url.defaultZone=http://localhost:8001/eureka/
 management.security.enabled=false
-feign.hystrix.enabled=false
+feign.hystrix.enabled=true
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
