--- a/qtcassist/qtcassist-base/src/main/resources/application-dev.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://10.104.20.123:3306/qtccloud
 spring.datasource.username=developer
 spring.datasource.password=developer1015
 
-eureka.client.service-url.defaultZone=http://10.103.13.217:8001/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8001/eureka/
 
 spring.redis.host=10.104.10.14
 spring.redis.port=6379
