--- a/qtchome/qtchome-web/src/main/resources/application-dev.yml
+++ b/qtchome/qtchome-web/src/main/resources/application-dev.yml
@@ -4,14 +4,14 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://10.103.13.217:8001/eureka/
+      defaultZone: http://localhost:8001/eureka/
     healthcheck:
       enabled: true
   instance:
     lease-renewal-interval-in-seconds: 10
     lease-expiration-duration-in-seconds: 20
     prefer-ip-address: true
-    instance-id: 10.103.13.217:${server.port}
+    instance-id: localhost:${server.port}
 
 security:
   basic:
