--- a/qtcassist/pom.xml
+++ b/qtcassist/pom.xml
@@ -160,6 +160,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>4.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
