--- a/qtccloud/qtccloud-zuul/src/main/resources/application-dev.yml
+++ b/qtccloud/qtccloud-zuul/src/main/resources/application-dev.yml
@@ -20,6 +20,15 @@ spring:
     multipart:
       max-file-size: 100Mb
       max-request-size: 100Mb
+  redis:
+      hostName: 127.0.0.1
+      port: 6379
+      jedis:
+        pool:
+          maxActive: 1024
+          maxWait: 1000
+          maxIdle: 200
+      timeout: 10000
 
 zuul:
   ignored-headers: Access-Control-Allow-Credentials, Access-Control-Allow-Origin
