--- a/qtccloud/qtccloud-zuul/src/main/resources/application-prod.yml
+++ b/qtccloud/qtccloud-zuul/src/main/resources/application-prod.yml
@@ -22,6 +22,16 @@ spring:
       max-file-size: 100Mb
       max-request-size: 100Mb
 
+  redis:
+      hostName: 10.104.108.177
+      port: 6379
+      jedis:
+        pool:
+          maxActive: 1024
+          maxWait: 1000
+          maxIdle: 200
+      timeout: 10000
+
 zuul:
   ignored-headers: Access-Control-Allow-Credentials, Access-Control-Allow-Origin
   host:
