--- a/qtcassist/qtcassist-base/pom.xml
+++ b/qtcassist/qtcassist-base/pom.xml
@@ -63,6 +63,12 @@
             <artifactId>qtcassist-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
