--- a/qtchome/qtchome-web/src/main/resources/application-dev.yml
+++ b/qtchome/qtchome-web/src/main/resources/application-dev.yml
@@ -24,3 +24,9 @@ spring:
   application:
     name: api-home
 
+ribbon:
+  ReadTimeout: 60000
+  ConnectTimeout: 60000
+  eureka:
+    enabled: true
+
