--- a/qtcassist/qtcassist-base/src/main/resources/application.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 management.endpoints.web.exposure.include = *
 
 ribbon.eureka.enabled=true
+ribbon.ReadTimeout=60000
+ribbon.ConnectTimeout=60000
 
 #开启健康检查（需要spring-boot-starter-actuator依赖）
 eureka.client.healthcheck.enabled=true
