--- a/qtchome/qtchome-web/src/main/resources/application-prod.yml
+++ b/qtchome/qtchome-web/src/main/resources/application-prod.yml
@@ -28,3 +28,9 @@ spring:
         max-file-size: 100Mb
         max-request-size: 100Mb
 
+ribbon:
+  ReadTimeout: 60000
+  ConnectTimeout: 60000
+  eureka:
+    enabled: true
+
